{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 30,
  "lineage": "4c4408a3-b71e-2546-24c1-7bb40d00aa81",
  "resources": [
    {
      "module": "module.main_vpc.module.main_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:internet-gateway/igw-09dfffa01bebdb0b7",
            "id": "igw-09dfffa01bebdb0b7",
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-vpc",
              "environment": "production"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc.module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:vpc/vpc-0ef599f586efff4bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea2caeb85d94e593",
            "default_route_table_id": "rtb-0606db7d74101226b",
            "default_security_group_id": "sg-02ca4f0dc6adca0f4",
            "dhcp_options_id": "dopt-0c32a766",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ef599f586efff4bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0606db7d74101226b",
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-vpc",
              "environment": "production"
            },
            "tags_all": {
              "Name": "production-vpc",
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway-1a.module.nat-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-cdc7aaf4",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-125-24-251.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.125.24.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-subnet",
              "elastic_ip": "production_application_subnet_nat_gw1a",
              "environment": "production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway-1b.module.nat-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-ccc7aaf5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-52-28-128-77.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.128.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-subnet",
              "elastic_ip": "production_application_subnet_nat_gw1b",
              "environment": "production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway-1c.module.nat-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-43f09d7a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-121-182-251.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.182.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-subnet",
              "elastic_ip": "production_application_subnet_nat_gw1c",
              "environment": "production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway-public-application-subnet[\"subnet-003d00c3c59277d59\"].module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-vpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-ccc7aaf5",
            "id": "nat-0051fd31a1a15f83b",
            "subnet_id": "subnet-003d00c3c59277d59",
            "tags": {
              "Name": "production-nat-gateway",
              "environment": "production",
              "subnet": "public-application"
            }
          },
          "dependencies": [
            "module.nat-gateway-1a.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1b.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1c.module.nat-eip.aws_eip.nat",
            "module.public_application_subnet.module.subnets.aws_subnet.subnet",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway-public-application-subnet[\"subnet-010fe52cd93ac5c14\"].module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-vpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-43f09d7a",
            "id": "nat-053bd69f7062ca890",
            "subnet_id": "subnet-010fe52cd93ac5c14",
            "tags": {
              "Name": "production-nat-gateway",
              "environment": "production",
              "subnet": "public-application"
            }
          },
          "dependencies": [
            "module.nat-gateway-1a.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1b.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1c.module.nat-eip.aws_eip.nat",
            "module.public_application_subnet.module.subnets.aws_subnet.subnet",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway-public-application-subnet[\"subnet-06c3fbd2d129e1f92\"].module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-vpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-cdc7aaf4",
            "id": "nat-07ec2368a70ece680",
            "subnet_id": "subnet-06c3fbd2d129e1f92",
            "tags": {
              "Name": "production-nat-gateway",
              "environment": "production",
              "subnet": "public-application"
            }
          },
          "dependencies": [
            "module.nat-gateway-1a.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1b.module.nat-eip.aws_eip.nat",
            "module.nat-gateway-1c.module.nat-eip.aws_eip.nat",
            "module.public_application_subnet.module.subnets.aws_subnet.subnet",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.private_database_subnet.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-055e27bba8e9a6160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/28",
            "id": "subnet-055e27bba8e9a6160",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.private_database_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-0a8428adab30f7bb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.10.16/28",
            "id": "subnet-0a8428adab30f7bb1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.private_database_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-076ad560b4181ca4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.10.32/28",
            "id": "subnet-076ad560b4181ca4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.private_database_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.public_application_subnet.module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-06c3fbd2d129e1f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06c3fbd2d129e1f92",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-003d00c3c59277d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-003d00c3c59277d59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:subnet/subnet-010fe52cd93ac5c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-010fe52cd93ac5c14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564179476684",
            "tags": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "production-subnet",
              "environment": "production",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc",
            "module.public_application_subnet.module.subnets.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_database_subnet.module.main_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:route-table/rtb-0f0e1d3e39e023908",
            "id": "rtb-0f0e1d3e39e023908",
            "owner_id": "564179476684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "production-route",
              "environment": "production",
              "route": "private_database_route_table"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_application_subnet.module.main_routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:564179476684:route-table/rtb-09788c7a2afcf0583",
            "id": "rtb-09788c7a2afcf0583",
            "owner_id": "564179476684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "production-route",
              "environment": "production",
              "route": "public_application_route_table"
            },
            "vpc_id": "vpc-0ef599f586efff4bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.module.main_vpc.aws_vpc.main-vpc"
          ]
        }
      ]
    }
  ]
}